--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    //MAPBOX
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
+    }
 }
