--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     }
     implementation 'com.takisoft.fix:preference-v7:25.3.0.0'
     implementation "androidx.preference:preference:1.0.0-alpha3"
+
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 }
