--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutineVersion"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 }
