--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,22 @@ dependencies {
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    //ROOM
+    def room_version = "2.2.0-alpha01"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
