--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
+    //KOIN
+    implementation 'org.koin:koin-android:2.0.1'
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+
     //ROOM
     def room_version = "2.2.0-alpha01"
 
