Notification with text builder. Requires list of solars

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,8 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    //notification
+
+
 
 }
